--- a/public/style.css
+++ b/public/style.css
@@ -1,8 +1,44 @@
-html{
-    height: 100%;
-    width: 100%;
+html,body{
+    height: 100%; width: 100%;
+    margin: 0; padding: 0;
     font-family: "Roboto";
+    
+    animation-fill-mode: forwards;
 }
 
-body { width: 100%; height: 100%; margin: 0; color: white; }
-canvas { display: block; }
+html{opacity: 0;transition-duration: .3s;}
+
+.visible{
+    opacity: 1;
+}
+
+canvas{
+    width: 1200px;
+    height: 800px;
+    border: 6px solid black;
+}
+
+body{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 50px;;
+    /* background-color: black; */
+}
+
+
+#status{
+    font-size: 120px;
+    color: #ccc;
+    z-index: 10;
+}
+
+/* #ball{
+    position: absolute;
+    width: 30px;
+    height: 30px;
+    border-radius: 50%;
+    top: 385px;
+    left: 585px;
+    background-color: black;
+} */
